#
# Pseudonymizer for Solaris BSM Audit Logs, http://www.roqe.org/bsmpseu
# Copyright 2002, 2003 Konrad Rieck <kr@roqe.org> - All rights reserved.
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU Library General Public License as published by
# the Free Software Foundation; either version 2 of the License, or (at
# your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
# Public License for more details.
#
# You should have received a copy of the GNU Library General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
#
# $Id: configure.in,v 3.1 2003/02/27 17:11:31 kr Exp $
#

# Process this file with autoconf to produce a configure script.
AC_INIT([src/main.c])
AM_INIT_AUTOMAKE(bsmpseu, 0.1.6)
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC
AC_C_BIGENDIAN

# Checks for libraries.
#AC_CHECK_LIB([nsl], [main],,
#   echo The nsl library is required for compilation.  ;
#   exit )

#AC_CHECK_LIB([socket], [main],,
#   echo The socket library is required for compilation. ;
#   exit )

AC_CHECK_LIB([z], [main],,
   echo The zlib library is required for compilation. ;
   exit )

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdio.h stdlib.h stdarg.h sys/varargs.h])
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h string.h])
AC_CHECK_HEADERS([strings.h sys/socket.h bsm/audit.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_CHECK_FUNCS([memset strdup])

AC_CONFIG_FILES([src/Makefile docs/Makefile Makefile])
AC_OUTPUT
